--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .App-header {
@@ -12,15 +12,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
 }
 
 .Button {
   position: relative;
   display: inline-block;
+
 }
 
 .Divider {
-  width: 10px;
+  width: 20px;
   height: 10px;
   display: inline-block;
 }
@@ -31,13 +33,10 @@
   left: 50%;
   margin: 0 auto;
   height: 100%;
-  /* width: 100%; */
+  width: 100%;
   resize: both;
   overflow: auto;
   background-color: white;
-  border-radius: 5px;
-  padding: 20px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
   transform: translate(-50%, -50%);
 }
 
